CLOUDFRONT-8880: Blog redesign reset-paddings on mobile fix (#112)
* CLOUDFRONT-9534/text-top-margin-without-title

* CLOUDFRONT-8880: Blog redesign reset-paddings on mobile fix

* fixup! CLOUDFRONT-8880: Blog redesign reset-paddings on mobile fix

* fixup! fixup! CLOUDFRONT-8880: Blog redesign reset-paddings on mobile fix

--- a/src/components/BlockBase/BlockBase.scss
+++ b/src/components/BlockBase/BlockBase.scss
@@ -4,9 +4,22 @@
 $block: '.#{$ns}block-base';
 
 #{$block} {
+    $block: &;
+
     --anchor-offset: #{$indentL};
 
     @include block();
+
+    @include add-specificity(&) {
+        @media only screen and (max-width: map-get($gridBreakpoints, 'sm')) {
+            margin-top: $indentM;
+            padding-bottom: $indentM;
+
+            &:first-child {
+                margin-top: var(--pc-first-block-mobile-indent, #{$indentXL});
+            }
+        }
+    }
 
     &_reset-paddings#{$block} {
         @include add-specificity(&) {
